# orbit

./: .gitignore  CLAUDE.md  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  bill.py  chat.py  domain.py  embedding.py  memory.py  mood.py  project.py  todo.py
backend/app/repositories/: bill_repository.py  chat_repository.py  memory_embedding_repository.py  memory_item_repository.py  memory_repository.py  mood_repository.py  project_repository.py  todo_repository.py
backend/app/services/: ai_provider.py  context_builder.py  embedding_provider.py  memory_retrieval.py  relevance.py  suggested_actions.py
backend/evals/: ask_eval_questions.json
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_chat_foundation.py  0003_memory_embeddings.py  0004_embedding_status.py  (+1 more)
backend/scripts/: cleanup_chat_sessions.py  compare_ask_eval_runs.py  run_ask_eval.py  run_ask_eval_samples.py  seed_demo_data.py
backend/tests/: conftest.py  test_ai_provider.py  test_ask_eval_harness.py  test_ask_eval_samples.py  test_bills.py  test_chat.py  test_cleanup_chat_sessions.py  test_compare_ask_eval_runs.py  test_embedding_provider.py  test_health.py  test_memory.py  test_memory_retrieval.py  test_migrations.py  test_moods.py  test_projects.py  test_relevance.py  test_seed_demo_data.py  test_suggested_action_extraction_fixtures.py  test_suggested_actions.py  test_todos.py
(+54 files in other folders)
