[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-backend"
version = "0.1.0"
description = "FastAPI backend for Orbit."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
